variable const + ejemplos

--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
 </p>
 <img id="img3" src="assets/img/example3.png" alt="ejemplo">
 <p><strong>Revisa la consola para ver el contenido</strong></p> <br>
-<p>Con <strong>Objetos y Areglos ó Valores Compuestos en general</strong> si nos permite cambiar/aumentar/elimnar los
+<p>Con <strong>"Variables Compuestas" como Objetos, Arreglos, etc</strong>, si nos permite cambiar/aumentar/elimnar los
   valores!</p>
 <img id="img4" src="assets/img/example4.png" alt="ejemplo">
+<h3>Entonces cual escogemos entre Let y Const cuando estemos con Valores Compuestos?
+</h3>
+<h5>Si nuestra variable se mantendra siendo todo el momento con la naturaleza que escogimos incialmente y solo cambia
+  sus "elementos"
+  escoge "const" si nuestra variable compuesta pasa de "Arreglo" a "Objeto"(osea que cambia su naturaleza) tendremos que
+  escoger "let"</h5>
 
 
 <script>
