--- a/strings.html
+++ b/strings.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Strings</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+  <header>
+    <h1 class="title">Cadenas de texto (Strings)</h1>
+  </header>
+  <main>
+
+  </main>
+
+  <script>
+    //Cadenas de texto aka Strings
+    /* crtl + z para rebobinar código */
+    let name = 'Samuel';
+    let lastname = "Salazar";
+    let greeting = new String("Hello World")
+    console.log(name, lastname, greeting);
+    //La propiedad "length" muestra la cantidad de caracteres que tiene nuestro string
+    console.log(
+      name.length,
+      lastname.length,
+      greeting.length
+    );
+    
+  </script>
 
 </body>
 
