añadiendo Strings al temario y conectandola desde un archivo externo

--- a/index.html
+++ b/index.html
@@ -15,15 +15,11 @@
       width: 600px;
       height: auto;
     }
-
-    span {
-      color: darkgoldenrod;
-    }
   </style>
 </head>
 
 <main>
-  <h1>Fundamentos <span>Javascript</span></h1>
+  <h1>Fundamentos <span class="title">Javascript</span></h1>
   <ul>
     <li><a href="#var-let">Variables ¿ Var ó Let ?</a></li>
     <li><a href="#const">Variable Const</a></li>
@@ -32,7 +28,7 @@
 </main>
 <hr>
 <section id="var-let">
-  <h2 class="title">1. VAR ó LET </h2>
+  <h2 class="sub-title">1. VAR ó LET </h2>
   <p>Si declaramos una variable con var se va guardar en el objeto window(en el navegador, Javascript), que con let no,
     y
     lo probamos tambien
@@ -50,7 +46,7 @@
 </section>
 <hr>
 <section id="const">
-  <h2 class="title">2. CONST </h2>
+  <h2 class="sub-title">2. CONST </h2>
   <p>No nos permitira cambiar el valor de las variables <strong>"Primitivas"</strong> osea con valores string, number,
     boolean, null, undefined y NaN.
   </p>
