--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <li><a href="#var-let">Variables ¿ Var ó Let ?</a></li>
     <li><a href="#const">Variable Const</a></li>
     <li><a href="strings.html">Cadenas de texto (Strings)</a></li>
+    <li><a href="templeate-strings.html">Template Strings</a></li>
   </ul>
 </main>
 <hr>
