Numbers in Javascript!

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <li><a href="#const">Variable Const</a></li>
     <li><a href="strings.html">Cadenas de texto (Strings)</a></li>
     <li><a href="templeate-strings.html">Template Strings</a></li>
+    <li><a href="numbers.html">Numbers</a></li>
   </ul>
 </main>
 <hr>
