datos booleanos y arreglando el orden de mis documentos

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <li><a href="strings.html">Cadenas de texto (Strings)</a></li>
     <li><a href="templeate-strings.html">Template Strings</a></li>
     <li><a href="numbers.html">Numbers</a></li>
+    <li><a href="booleans.html">Booleans</a></li>
+    <li><a href="">Undefined, Null y NaN</a></li>
   </ul>
 </main>
 <hr>
