undefined, null and NaN

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <ul>
     <li><a href="#var-let">Variables ¿ Var ó Let ?</a></li>
     <li><a href="#const">Variable Const</a></li>
-    <li><a href="strings.html">Cadenas de texto (Strings)</a></li>
-    <li><a href="templeate-strings.html">Template Strings</a></li>
-    <li><a href="numbers.html">Numbers</a></li>
-    <li><a href="booleans.html">Booleans</a></li>
-    <li><a href="">Undefined, Null y NaN</a></li>
+    <li><a href="02-strings.html">Cadenas de texto (Strings)</a></li>
+    <li><a href="03-templeate-strings.html">Template Strings</a></li>
+    <li><a href="04-numbers.html">Numbers</a></li>
+    <li><a href="05-booleans.html">Booleans</a></li>
+    <li><a href="06-undefined-null-naN.html">Undefined, Null y NaN</a></li>
   </ul>
 </main>
 <hr>
