--- a/06-undefined-null-naN.html
+++ b/06-undefined-null-naN.html
@@ -4,11 +4,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Undefined, Null y NaN</title>
 </head>
 
 <body>
+  <header>
+    <h1>Undefined, Null y NaN</h1>
+  </header>
+  <hr>
+  <section>
+    <h2 class="sub-title">Diferencia Entre <u>Undefined</u> y <u>Null</u></h2>
+    <p>Tanto Null como Undefined van a representar un <strong>valor ausente</strong>, es decir una variable que no tiene
+      valor, pero la
+      gran difrencia es que Undefined <br> no ha sido inicializada. (se ha creado la variable pero no se ha colocado
+      nigun
+      valor)</p>
+    <img src="assets/img/undefined.png" alt="ejemplo">
 
+    <h2 class="sub-title">Null</h2>
+    <p>Al igual que Undefined, Null es un valor especial que significa que la variable esta vacia, <strong>pero este es
+        un valor
+        intencionalmente asignado por el programador</strong>.</p>
+    <img src="assets/img/null.png" alt="ejemplo">
+  </section>
+  <hr>
+  <section>
+    <h2 class="sub-title"><u>NaN</u> (Not a Number)</h2>
+    <p>Es un "Resultado" que te da Javascript para indicar que no es posible hacer cierta operación aritmética debido a
+      que alguno de los datos no es del tipo númerico.</p>
+    <img src="assets/img/naN.png" alt="ejemplo">
+  </section>
+  <footer>
+    <a href="index.html">Página Principal</a>⚡
+  </footer>
+
+  <script>
+
+    let indefinido
+    console.log(indefinido);
+
+    let nulo = null
+    console.log(nulo);
+
+    let noEsUnNumero = "Hello" * 3.7;
+    console.log(noEsUnNumero);
+  </script>
 </body>
 
 </html>
