Concepto de funciones y estructura

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <li><a href="04-numbers.html">Numbers</a></li>
     <li><a href="05-booleans.html">Booleans</a></li>
     <li><a href="06-undefined-null-naN.html">Undefined, Null y NaN</a></li>
+    <li><a href="07-functions.html">Funciones</a></li>
   </ul>
 </main>
 <hr>
