invocación de una función

--- a/07-functions.html
+++ b/07-functions.html
@@ -26,6 +26,8 @@
   <section>
     <h2>Estructura</h2>
     <img src="assets/img/function.png" alt="ejemplo">
+    <h2>Invocación</h2>
+    <img src="assets/img/function2.png" alt="ejemplo">
   </section>
 
   <script>
