agregandole el footer(enlace de regreso) a la sección de funciones

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
     que
     escoger "let"</h5>
 </section>
+<hr>
+<footer>
+  <a href="index.html">Página Principal</a>⚡
+</footer>
 
 <script>
 
