--- a/07-functions.html
+++ b/07-functions.html
@@ -97,6 +97,10 @@
       te dejara invocarla si aún no esta inicializada , es decir, si lo invocas antes que esta.</p>
     <img style="width: 1280px; height: 200px;" src="assets/img/function8.png" alt="ejemplo">
   </section>
+  <hr>
+  <footer>
+    <a href="index.html">Volver a Temario</a>⚡
+  </footer>
 
 
   <script>
