--- a/07-functions.html
+++ b/07-functions.html
@@ -99,7 +99,7 @@
   </section>
   <hr>
   <footer>
-    <a href="index.html">Volver a Temario</a>⚡
+    <a href="index.html">Página Principal</a>⚡
   </footer>
 
 
