--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <li><a href="05-booleans.html">Booleans</a></li>
     <li><a href="06-undefined-null-naN.html">Undefined, Null y NaN</a></li>
     <li><a href="07-functions.html">Funciones</a></li>
+    <li><a href="08-arrays.html">Arreglos</a></li>
   </ul>
 </main>
 <hr>
