--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <li><a href="07-functions.html">Funciones</a></li>
     <li><a href="08-arrays.html">Arreglos</a></li>
     <li><a href="09-objects.html">Objetos</a></li>
+    <li><a href="10-Operadores.html">Operadores</a></li>
   </ul>
 </main>
 <hr>
