--- a/11-Condicionales.html
+++ b/11-Condicionales.html
@@ -84,6 +84,10 @@
     </pre>
     <img class="std" src="assets/img/condicionales4.png" alt="ejemplo">
   </section>
+  <hr>
+  <footer>
+    <a href="index.html">Página Principal</a>⚡
+  </footer>
 
   <script>
     /* If - Else */
