--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <li><a href="08-arrays.html">Arreglos</a></li>
     <li><a href="09-objects.html">Objetos</a></li>
     <li><a href="10-Operadores.html">Operadores</a></li>
-    <li><a href="11-Condicionales.html">Condicionales</a></li>
+    <li><a href="11-Estruc-Condicionales.html">Estructuras Condicionales</a></li>
+    <li><a href="12-Estruc-Repetitivas.html">Estructuras Repetitivas</a></li>
   </ul>
 </main>
 <hr>
