Añadiendo Enfasis a palabras importantes

--- a/12-Estruc-Repetitivas.html
+++ b/12-Estruc-Repetitivas.html
@@ -121,7 +121,8 @@
     </p>
     <img src="assets/img/loops7.png" alt="ejemplo">
     <h3>Utilizando el ciclo For..in</h3>
-    <p>"propiedad" Es una variable temporal que se crea dentro del ciclo. En cada "vuelta" (iteración) del ciclo,
+    <p><strong>"propiedad"</strong> Es una variable temporal que se crea dentro del ciclo. En cada "vuelta" (iteración)
+      del ciclo,
       esta variable tomará el
       valor de una clave del objeto. En este ejemplo:</p>
     <ol>
@@ -130,7 +131,9 @@
       <li>En la tercera vuelta será "edad".</li>
     </ol>
 
-    persona[propiedad]: Esto es lo que usamos para acceder al valor asociado a la clave que estamos recorriendo en
+    <strong>persona[propiedad]</strong>: Esto es lo que usamos para <strong>acceder al valor asociado a la
+      clave</strong> que estamos
+    recorriendo en
     cada
     vuelta. Por ejemplo:
     <ol>
