Manejo de Errores, Try-Catch-Finally y agregandole un Mini-Temario

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <li><a href="10-Operadores.html">Operadores</a></li>
     <li><a href="11-Estruc-Condicionales.html">Estructuras Condicionales</a></li>
     <li><a href="12-Estruc-Repetitivas.html">Estructuras Repetitivas</a></li>
+    <li><a href="13-Manejo_Errores.html">Manejo de Errores</a></li>
   </ul>
 </main>
 <hr>
