Aumentando documentación y Guías al temario y algun que otro retoque

--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
 
 <main>
   <h1>Fundamentos <span class="title">Javascript</span></h1>
+  <h4>GUÍAS Y DOCUMENTACIÓN</h4>
   <ul>
+    <li><a href="https://lenguajejs.com/assets/javascript-cheatsheet-2019.pdf">PDF con Guía Completa (Cheaatsheets)</a>
+    </li>
+    <li><a href="https://jonmircha.com/javascript" target="_blank" rel="noopener">Javascript Jonmircha</a></li>
+    <li><a href="https://www.w3schools.com/js/default.asp" target="_blank" rel="noopener">w3schools JS</a></li>
+    <li><a href="https://lenguajejs.com/javascript/" target="_blank" rel="noopener">Documentación Solida JS</a></li>
+    <li><a href="https://lenguajejs.com/dom/" target="_blank" rel="noopener">Documentación DOM</a></li>
+    <li><a href="https://lenguajejs.com/asincronia/" target="_blank" rel="noopener">Documentación Asincronia</a></li>
+  </ul>
+  <h4>RUTA</h4>
+  <ul>
+    <li><a href="file:///C:/Users/JSamu/OneDrive/Documentos/HTML/myConfig_shortcuts_emmet/index.html"
+        target="_blank">EMMET</a></li>
     <li><a href="#var-let">Variables ¿ Var ó Let ?</a></li>
     <li><a href="#const">Variable Const</a></li>
     <li><a href="02-strings.html">Cadenas de texto (Strings)</a></li>
